# NeoFOAM

./: .buildinfo  .clang-format  .clang-tidy  .cmake-format.py  .gitignore  .hdoc.toml  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  REUSE.toml  _typos.toml  build.sh  build_docs.sh  contributing.html  download_installOF.sh  enviroment.yml  genindex.html  index.html  install.sh  install_kokkos.sh  installation.html  meson.build  objects.inv  plotBenchmarks.py  search.html  searchindex.js  setEnv.sh  sitemap.xml
applications/solver/minimal/: CMakeLists.txt  createTime.H  minimal.cpp  setRootCase.H
benchmarks/: CMakeLists.txt  catch_main.hpp
benchmarks/blas/: bench_blas.cpp
benchmarks/fields/: CMakeLists.txt  bench_blas.cpp  bench_fields.cpp  field.cpp
bindings/: CMakeLists.txt  python.cpp  python.hpp
include/: CMakeLists.txt  meson.build
include/NeoFOAM/: NeoFOAM.hpp  NeoFOAM.hpp.in  core.hpp  dsl.hpp  fields.hpp  linearAlgebra.hpp  setup.hpp  timeIntegration.hpp
include/NeoFOAM/DSL/: PDEComponent.hpp  PDEExpression.hpp  coeff.hpp  divOperator.hpp  eqnSystem.hpp  eqnTerm.hpp  eqnTermBuilder.hpp  equation.hpp  laplacianOperator.hpp  operator.hpp
include/NeoFOAM/blas/: Field.hpp  FieldOperations.hpp  adjacency.hpp  boundaryFields.hpp  deviceAdjacency.hpp  deviceField.hpp  domainField.hpp  field.hpp  fields.hpp  span.hpp  test_deviceAdjacency.hpp
include/NeoFOAM/core/: Dictionary.hpp  Error.hpp  Info.hpp  Time.hpp  collection.hpp  database.hpp  demangle.hpp  dictionary.hpp  document.hpp  error.hpp  info.hpp  input.hpp  inputs.hpp  lookupTable.hpp  parallelAlgorithms.hpp  registerClass.hpp  runTime.hpp  runtimeSelectionFactory.hpp  span.hpp  time.hpp  tokenList.hpp  types.hpp  view.hpp
include/NeoFOAM/dsl/: coeff.hpp  ddt.hpp  equation.hpp  explicit.hpp  expression.hpp  implicit.hpp  operator.hpp  solver.hpp  spatialOperator.hpp  temporalOperator.hpp
include/NeoFOAM/fields/: BoundaryFields.hpp  DeviceField.hpp  DomainField.hpp  Field.hpp  FieldGraph.hpp  FieldOperations.hpp  FieldTypeDefs.hpp  GeometricField.hpp  adjacency.hpp  boundaryFields.hpp  deviceAdjacency.hpp  domainField.hpp  field.hpp  fieldDatabase.hpp  fieldFreeFunctions.hpp  fieldTypeDefs.hpp  scalingField.hpp  segmentedField.hpp
include/NeoFOAM/finiteVolume/: cellCentred.hpp
include/NeoFOAM/fvOperators/: grad.h
include/NeoFOAM/helpers/: exceptions.hpp
include/NeoFOAM/linearAlgebra/: COOMatrix.hpp  CSRMatrix.hpp  LinearSystem.hpp  ginkgo.hpp  linearAlgebra.hpp  linearSystem.hpp  petsc.hpp  petscSolver.hpp  petscSolverContext.hpp  solver.hpp  utilities.hpp
include/NeoFOAM/mesh/: cellDefinitions.hpp  cellTypes.h  cellUtilities.h  mesh.hpp  unstructured.hpp
include/NeoFOAM/primitives/: index.hpp  label.hpp  scalar.hpp  tensor.hpp  vector.hpp
include/NeoFOAM/timeIntegration/: backwardEuler.hpp  explicitRungeKutta.hpp  forwardEuler.hpp  rungeKutta.hpp  sundailsCollection.hpp  sundials.hpp  timeIntegration.hpp
include/NeoN/: NeoFOAM.hpp.in
include/NeoN/core/: input.hpp  span.hpp  tokenList.hpp
include/NeoN/dsl/: ddt.hpp  implicit.hpp  (+1 more)
include/neofoam/: hello_world.hpp
src/: CMakeLists.txt  hello_world.cpp  hello_world.cxx  meson.build  setup.cpp
src/NeoFOAM/: CMakeLists.txt  hello_world.cxx
src/benchmarks/: CMakeLists.txt
src/core/: CMakeLists.txt  Dictionary.cpp  Error.cpp  Kokkos.cpp  Time.cpp  collection.cpp  database.cpp  demangle.cpp  dictionary.cpp  document.cpp  kokkos.cpp  lookupTable.cpp  runTime.cpp  runtimeSelectionFactory.cpp  time.cpp  tokenList.cpp
src/dsl/: coeff.cpp  explicit.cpp  operator.cpp  spatialOperator.cpp  temporalOperator.cpp
src/executor/: CPUExecutor.cpp  GPUExecutor.cpp  OMPExecutor.cpp  serialExecutor.cpp
src/fields/: field.cpp  fieldDatabase.cpp
src/finiteVolume/: boundary.cpp
src/linearAlgebra/: ginkgo.cpp  utilities.cpp
src/mesh/: CMakeLists.txt
src/primitives/: vector.cpp
src/test/: CMakeLists.txt  test_DSL.cpp  test_adjacency.hpp  test_blas.cpp  test_blas.hpp  test_blas_main.cpp  test_boundaryField.hpp  test_cellUtilities.cpp  test_field.hpp  test_hello_world.cpp  test_time.cpp
src/timeIntegration/: rungeKutta.cpp  timeIntegration.cpp
subprojects/OpenFOAM-v2306/: meson.build  meson_options.txt
test/: CMakeLists.txt  common.hpp  test_Dictionary.cpp  test_Executor.cpp  test_Field.cpp  test_ParallelAlgorithms.cpp  test_amrex.cpp  test_blas.cpp  test_blas.cpp.1  test_dictionary.cpp  test_main.cpp
test/amrex/: CMakeLists.txt  test_amrex.cpp
test/catch2/: CMakeLists.txt  catch2_common.hpp  executorGenerator.hpp  mpiGlobals.cpp  mpiGlobals.hpp  mpiReporter.cpp  mpiReporter.hpp  mpiSerialization.cpp  mpiSerialization.hpp  test_main.cpp  test_main_mpi.cpp
test/core/: CMakeLists.txt  collection.cpp  customTestCollection.hpp  database.cpp  dictionary.cpp  document.cpp  executor.cpp  input.cpp  inputs.cpp  parallelAlgorithms.cpp  registerClass.cpp  runTimeSelectionFactory.cpp  schema.cpp  span.cpp  testRegister.cpp  testRegister.hpp  test_RegisterClass.cpp  tokenList.cpp  view.cpp
test/dsl/: CMakeLists.txt  coeff.cpp  common.hpp  dsl.cpp  eqnTerm.cpp  equation.cpp  expression.cpp  operator.cpp  spatialOperator.cpp  temporalOperator.cpp  testOperator.hpp
test/fields/: CMakeLists.txt  compressedIntegers.cpp  domainField.cpp  field.cpp  field.hpp  segmentedField.cpp  test_DomainField.cpp  test_Field.cpp
test/finiteVolume/: CMakeLists.txt
test/integration/: CMakeLists.txt
test/linearAlgebra/: CMakeLists.txt  CSRMatrix.cpp  ginkgo.cpp  linearAlgebra.cpp  linearSystem.cpp  petsc.cpp
test/matrixPetsc/: CMakeLists.txt  matrixAssembly.cpp  solutionLinearSystem.cpp
test/mesh/: CMakeLists.txt  unstructuredMesh.cpp
test/petsc/: CMakeLists.txt  kspKokkos.cpp  test_petsc_ksp.cpp  test_vec_matrix_gpu.cpp  vectorMatrixMultiplication.cpp
test/timeIntegration/: CMakeLists.txt  ark_heat2D.cpp  explicitRungeKutta.cpp  forwardEuler.cpp  implicitTimeIntegration.cpp  rungeKutta.cpp  test_sun_kokkos.cpp  test_sundials.cpp  test_sunlinsol.h  timeIntegration.cpp
(+16556 files in other folders)
